# character-card

./: .gitignore  LICENSE  README.md  character-card.spec  config.yml  main.py  pyproject.toml
config/: character.py  config_loader.py
const/: __init__.py
scripts/: build.sh
subcommand/: card.py  pdf.py
test/: conftest.py  test_card_cli.py  test_character.py  test_csv.py  test_pdf_cli.py
test/fixtures/: test_config.csv
util/: card_maker.py  csv.py  path_safety.py  pdf_maker.py  resource_path.py
